--- a/optimset.tex
+++ b/optimset.tex
@@ -176,7 +176,7 @@
 \begin{abstract}
     This paper demonstrates the optimality of an interpolation set employed in derivative-free trust-region methods.
     This set is optimal in the sense that it minimizes the constant of well-poisedness in a ball centred at the starting point.
-    It is chosen as the default initial interpolation set by many derivative-free trust-region optimization methods based on underdetermined quadratic interpolation, including \solvername{newuoa}, \solvername{bobyqa}, \solvername{lincoa}, and \solvername{cobyqa}.
+    It is chosen as the default initial interpolation set by many derivative-free trust-region methods based on underdetermined quadratic interpolation, including \solvername{newuoa}, \solvername{bobyqa}, \solvername{lincoa}, and \solvername{cobyqa}.
     Our analysis provides a theoretical justification for this choice.
 \end{abstract}
 
@@ -220,10 +220,10 @@ Clearly, if the interpolation conditions~\eqref{eq:intp-cond} do not contradict 
 \begin{equation*}
     \card(\xpt[k]) = \dim(\qpoly) = \frac{1}{2} (n + 1) (n + 2).
 \end{equation*}
-Such a scheme, referred to as fully-determined quadratic interpolation, is employed by \solvername{uobyqa}~\cite{Powell_2002}.
+Such a scheme, referred to as the fully-determined quadratic interpolation, is used by \solvername{uobyqa}~\cite{Powell_2002}.
 However, the first iteration of this method requires~$\bigo(n^2)$ function evaluations to construct the initial model~$\objm[0]$.
 This is impracticable in practice unless~$n$ is small.
-Therefore, modern interpolation-based \gls{dfo} methods employ fewer interpolation points, giving rise to so-called underdetermined quadratic interpolation.
+Therefore, modern interpolation-based \gls{dfo} methods work with fewer interpolation points, giving rise to the underdetermined quadratic interpolation.
 To uniquely define~$\objm[k]$ in this case, it is common to solve an interpolation problem of the form
 \begin{equation}
     \label{eq:intp-var}
@@ -233,7 +233,7 @@ To uniquely define~$\objm[k]$ in this case, it is common to solve an interpolati
     \end{aligned}
 \end{equation}
 where~$\mathcal{F}^k$ is a functional that promotes certain desired regularity of~$\objm[k]$.
-For example, \solvername{dfo}~\cite{Conn_Scheinberg_Toint_1998} and \solvername{mnh}~\cite{Wild_2008} employ
+For example, \solvername{dfo}~\cite{Conn_Scheinberg_Toint_1998} and \solvername{mnh}~\cite{Wild_2008} take
 \begin{equation}
     \label{eq:mnh}
     \mathcal{F}^k(Q) = \norm[\big]{\nabla^2 Q}_{\mathsf{F}}^2,
@@ -249,7 +249,7 @@ The variational problem~\eqref{eq:intp-var}--\eqref{eq:df-psb} defines the deriv
 Broyden update proposed by Powell (see~\cite{Powell_2004a,Powell_2013},~\cite[\S~3.6]{Zhang_2012},
 and~\cite[\S~2.4.2]{Ragonneau_2022}),
 with the functional~\eqref{eq:df-psb} being inspired by the least-change property of quasi-Newton updates~\cite{Dennis_Schnabel_1979}.
-To ensure that~$\objm[k]$ is uniquely defined by~\eqref{eq:intp-var} and includes second-order information, one normally requires that
+To ensure that~\eqref{eq:intp-var} admits a solution that includes second-order information, one normally requires~that
 \begin{equation*}
     n + 2 \le \card(\xpt[k]) \le \frac{1}{2} (n + 1) (n + 2).
 \end{equation*}
@@ -258,15 +258,15 @@ Finally, if the constraint functions underlying the feasible set~$\fset$ in~\eqr
 Most interpolation-based \gls{dfo} methods do not build the interpolation point~$\xpt[k]$ \emph{ab~initio} at each iteration.
 Instead, they choose an initial interpolation set~$\xpt[0]$ and then  update~$\xpt[k]$ to obtain~$\xpt[k + 1]$.
 For example, only one point differs between~$\xpt[k]$ and~$\xpt[k + 1]$ in Powell's trust-region \gls{dfo} methods and \solvername{cobyqa} during usual iterations.
-This mechanism prevents the methods from performing unnecessary function evaluations, which are normally considered the principal cost of \gls{dfo} methods.
-In this case, it is clear that the initial interpolation set~$\xpt[0]$ must be carefully chosen, as it will impact the optimization method for the subsequent iterations.
-Powell devised an initial interpolation set~$\xpt[0]$ for his methods, described in Subsection~\ref{subsec:powell-set}.
+This mechanism tries to make the best of the function evaluations, which are normally considered as the principal cost of \gls{dfo} methods.
+In such a case, it is clear that the initial interpolation set~$\xpt[0]$ must be carefully chosen, as it will impact the optimization method for the subsequent iterations.
+Powell devised an initial interpolation set for his methods, described in Subsection~\ref{subsec:powell-set}.
 Although the design of this set is natural, no theoretical analysis has been provided to justify its configuration.
 This paper contributes such an analysis, showing that no other interpolation set is better in
 a well-poisedness~sense.
 
 This paper is organized as follows.
-Section~\ref{sec:well-poisedness} introduces the $\Lambda$-poisedness of interpolation sets in the underdetermined sense.
+Section~\ref{sec:well-poisedness} introduces the $\Lambda$-poisedness of interpolation sets in the minimum Frobenius norm sense.
 Section~\ref{sec:main-result} then employs this notion to study the initial interpolation set used by Powell.
 We provide lower and upper bounds for the constant of well-poisedness of the set,
 evaluate this constant in a few special cases,
@@ -306,8 +306,8 @@ This problem covers~\eqref{eq:intp-var}--\eqref{eq:mnh}, and also covers~\eqref{
 Observe that the variational problem~\eqref{eq:intp-cond-gen} is an equality-constrained quadratic
 programming problem with respect to the coefficients of~$Q$. Thus its KKT system is linear.
 The exact formulation of this system can be found in~\cite{Powell_2004a,Powell_2004b}.
-The set~$\xpt$ is poised if this KKT system is uniquely solvable~(see~\mbox{\cite[\S~2]{Powell_2004a}} and~\cite[\S~5.3]{Conn_Scheinberg_Vicente_2009}).
-Intuitively, the interpolation set~$\xpt$ can be said well-poised if this system is well-conditioned.
+The interpolation set~$\xpt$ is poised if this KKT system is uniquely solvable~(see~\mbox{\cite[\S~2]{Powell_2004a}} and~\cite[\S~5.3]{Conn_Scheinberg_Vicente_2009}).
+Intuitively,~$\xpt$ can be said well-poised if this system is well-conditioned.
 This intuition will be formalized in the sequel.
 % To formalize this intuition, we first introduce the notion of minimum-norm Lagrange polynomials.
 
@@ -329,7 +329,7 @@ To formally define a measure of well-poisedness of~$\xpt$, we first need to exte
 \end{definition}
 
 Remark that if~$m = (n + 1) (n + 2) / 2$, then Definition~\ref{def:min-norm-lagp} reduces to the classical definition of the Lagrange polynomials.
-Morveover, it can be shown that the solution~$\objm$ to problem~\eqref{eq:intp-cond-gen} is given by
+Moreover, it can be shown that the solution~$\objm$ to problem~\eqref{eq:intp-cond-gen} is given by
 \begin{equation*}
     \objm(x) = \sum_{i = 1}^m \obj(y^i) \lagp[i](x)
 \end{equation*}
@@ -341,15 +341,20 @@ We are now equipped to define the notion of~$\Lambda$-poisedness in the minimum 
 
 \begin{definition}[$\Lambda$-poisedness in the minimum Frobenius norm sense~{\cite[Definition~5.6]{Conn_Scheinberg_Vicente_2009}}]
     \label{def:lambda-p}
-    The poised interpolation set~$\xpt$ is said to be~\emph{$\Lambda$-poised in the minimum Frobenius norm sense} in a compact set~$\mathcal{C} \subseteq \R^n$, for some~$\Lambda > 0$, if
+    Let~$\Lambda$ be a positive constant and~$\mathcal{C}\subseteq\R^n$ be a compact set.~The set~$\xpt$ is said to be~\emph{$\Lambda$-poised in the minimum Frobenius norm sense} in~$\mathcal{C}$ if it is poised and
     \begin{equation*}
         \max_{1 \le i \le m} \max_{x \in \mathcal{C}} @@ \abs[\big]{\lagp[i](x)} \le \Lambda.
     \end{equation*}
 \end{definition}
 
-If~$\xpt$ is~$\Lambda_0$-poised in the minimum Frobenius norm sense in~$\mathcal{C}$, it is obviously~$\Lambda$-poised in the same sense for all~$\Lambda \ge \Lambda_0$.
-Moreover, one can show that~$\xpt$ is~$\Lambda$-poised if and only if the condition number of the coefficient matrix of the KKT system of~\eqref{eq:intp-var} is bounded by some terms proportional to~$\Lambda$~\cite[Theorem~5.8]{Conn_Scheinberg_Vicente_2009}.
+One can show that~$\xpt$ is~$\Lambda$-poised if and only if the condition number of the coefficient matrix of the KKT system of~\eqref{eq:intp-var} is bounded by some terms proportional to~$\Lambda$~\cite[Theorem~5.8]{Conn_Scheinberg_Vicente_2009}.
 Therefore, the notion of~$\Lambda$-poisedness formalizes the intuitive notion of well-poisedness mentioned above.
+
+If~$\xpt$ is a poised interpolation set and~$\mathcal{C}\subseteq \R^n$ is compact, then we will refer to
+\[
+    \Lambda_{\mathcal{C}}(\xpt) = \max_{1 \le i \le m} \max_{x \in \mathcal{C}} @@ \abs[\big]{\lagp[i](x)}
+\]
+as the \emph{constant of well-poisedness} of~$\xpt$ in~$\mathcal{C}$.
 
 \section{Optimality of Powell's initial interpolation set}
 \label{sec:main-result}
@@ -412,7 +417,7 @@ According to Definition~\ref{def:lambda-p}, the set~$\xpt[0]_m$ is~$\Lambda_p$-p
     \Lambda_p = \max_{1 \le i \le m} \max_{\norm{x}_p \le \Delta} \abs[\big]{\lagp[i](x)},
 \end{equation}
 where~$\lagp[i]$ is the~$i$th minimum-norm Lagrange polynomial associated with~$\xpt[0]_m$ for~$i \in \set{1, 2, \dots, m}$.
-We refer to~$\Lambda_p$ as the \emph{constant of well-poisedness} of~$\xpt[0]_m$ in~$\mathcal{B}_p(\Delta)$.
+Indeed, $\Lambda_p$ is the {constant of well-poisedness} of~$\xpt[0]_m$ in~$\mathcal{B}_p(\Delta)$.
 
 \subsubsection{Formulation of the Lagrange polynomials}
 
